# Screenshots_in_report

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  report.html
tests/: test_fixture.py  test_it.py
