[tool.poetry]
name = "poetry-test-project"
version = "0.1.0"
description = ""
authors = ["as-dodo <cestanastasia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2.2"
pytest = "^7.2.0"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest-html = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
